--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,3 @@
 spring.application.name=clinic-api
 
-# Configurações do MongoDB
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=clinic
-spring.data.mongodb.username=root
-spring.data.mongodb.password=root
+spring.data.mongodb.uri=mongodb://localhost:27017/clinic
